--- a/app/assets/stylesheets/components/_location.scss
+++ b/app/assets/stylesheets/components/_location.scss
@@ -1,7 +1,7 @@
 // .location_container {
-  // position: relative;
-  // width: 500px; /* You can adjust the container size as needed */
-  // height: 500px; /* You can adjust the container size as needed */
+// position: relative;
+// width: 500px; /* You can adjust the container size as needed */
+// height: 500px; /* You can adjust the container size as needed */
 // }
 
 .corner-button {
@@ -39,12 +39,6 @@
   margin: 10px auto;
   // margin-top: 15px;
   overflow: hidden;
-
-  .card-indulge{
-    width: 190px;
-  }
-
-
 }
 ////
 // /// zzz
@@ -76,7 +70,6 @@
 //   opacity: .7;
 //   margin: 0;
 // }
-
 
 // .card-trip .card-trip-infos {
 //   padding: 16px;
