--- a/app/assets/stylesheets/pages/_budget.scss
+++ b/app/assets/stylesheets/pages/_budget.scss
@@ -14,6 +14,7 @@
   cursor: pointer;
   color: $secondary-color;
   opacity: 1;
+  border: 4px solid transparent;
 }
 
 .custom-checkbox:checked + label {
@@ -52,7 +53,6 @@
 }
 
 .top-check-boxes {
-  margin: 16px 0;
   gap: 16px;
 }
 
